jszt/ingress/star_open/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "false"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
  name: demo-app-ingress
spec:
  tls:
  - hosts:   
    - demo.open.vankeservice.com
    secretName: wildcard.open.vankeservice.com-tls
  rules:
    # eg  www.vankeservice.com
  - host: demo.open.vankeservice.com
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-app
          servicePort: 8081
